Correct the typo in Ultimate_TwiceBaked_Potatoes's ul.

--- a/recipes/Ultimate_TwiceBaked_Potatoes.html
+++ b/recipes/Ultimate_TwiceBaked_Potatoes.html
@@ -25,7 +25,7 @@
         <li>½ cup milk</li>
         <li>4 tablespoons butter</li>
         <li>½ teaspoon salt</li>
-        <li>½ teaspoon pepper/li>
+        <li>½ teaspoon pepper</li>
         <li>1 cup shredded Cheddar cheese, divided</li>
         <li>8 green onions, sliced, divided</li>
     </ul>
